--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "not dead"
+  ],
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
